2007-01-12  Gert Driesen  <drieseng@users.sourceforge.net>

	* scripts/Makefile.am: Added 'al2'.

2007-01-11  Dick Porter  <dick@ximian.com>

	* acconfig.h: 
	* configure.in: Check for IP_DONTFRAGMENT and IP_MTU_DISCOVER.

2007-01-11  Marek Habersack  <grendello@gmail.com>

	* data/net_2_0/machine.config: Added the DbProviderFactories
	section, together with the first entry - for SQLite.

2007-01-03  Wade Berrier  <wberrier@novell.com>

	* scripts/mono-find-provides.in:
	* scripts/mono-find-requires.in: error out if monodis isn't
	functioning properly.  Otherwise when building rpms, 
	the provides/requires isn't generated correctly if monodis 
	isn't present. 

	Fixes: bnc #227362

2007-01-01  Miguel de Icaza  <miguel@novell.com>

	* configure.in (darwin.CPPFLAGS): Temporary workaround for the bug
	reported in 77324.  When we get a linker script for MacOS we can
	take this out, but for now lets keep it in here.

	* scripts/mono-service.in (debug): Add --debug, --no-daemonize and
	make sure that this works with 2.0 (wrong binary was being
	refereced).

	Fixes: #80309

Mon Dec 18 18:19:50 CET 2006 Paolo Molaro <lupus@ximian.com>

	* configure.in: fixed compiler/linker options when
	configuring under hpux/ia64 (patch from warren@warrenandrachel.com
	(Warren Smith)).

Mon Dec 18 15:28:49 CET 2006 Paolo Molaro <lupus@ximian.com>

	* configure.in: detection code for dlopen ().

Mon Dec 11 10:23:18 CET 2006 Paolo Molaro <lupus@ximian.com>

	* configure.in, mono.pc.in, */Makefile.am: istall the header
	files in a API version specific directory.

2006-12-07  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* data/browscap.ini: added msdomversion for ie6/7,
	fixed ecmascriptversion in ie6/7

2006-11-28  Marek Habersack  <grendello@gmail.com>

	* data/net_2_0/web.config: Added the imported namespaces statement
	for ASP.NET compilation.

2006-11-17  Wade Berrier  <wberrier@novell.com>

	* configure.in: version bump to 1.2.1
